# solweig-gpu

./: .gitignore  PLAN.md  README.md  compute_pet.py  merge_outputs.py  prepare_data.py  pyproject.toml  run.py
benchmarks/: compare_solweig.sh  report.py
data/: 01-CURRENT_14jul.txt  02-MID-CENTURY_14jul.txt  03-END-CENTURY_14jul.txt
pipeline/: 01_prepare_data.py  02_run_solweig.py  02b_run_solweig_umep.py  03_compute_pet.py  04_merge_outputs.py  05_sun_exposure.py  06_mask_buildings.py
solweig_lyon/: config.py  pet.py
solweig_lyon/utils/: buildings.py  dem.py  geo.py  landcover.py  trees.py
utils/: buildings.py  constants.py  dem.py  geo.py  landcover.py  trees.py
