[project]
name = "solweig-lyon"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "geopandas",
    "laspy[lazrs]",
    "numba>=0.65.1",
    "numpy",
    "pandas",
    "pyproj",
    "rasterio",
    "requests",
    "scipy",
    "solweig-gpu @ git+https://github.com/nvnsudharsan/SOLWEIG-GPU@main",
]
