[project]
name = "solweig-lyon"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "geopandas",
    "laspy[lazrs]",
    "numba>=0.65.1",
    "numpy",
    "pandas",
    "pyproj",
    "rasterio",
    "requests",
    "scipy",
    "solweig-gpu @ git+https://github.com/nvnsudharsan/SOLWEIG-GPU@main",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["solweig_lyon"]
