[project]
name = "solweig-lyon"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "gdal==3.4.1",
    "geopandas",
    "laspy[lazrs]",
    "numba>=0.65.1",
    "numpy<2",
    "pandas",
    "pyproj",
    "rasterio",
    "requests",
    "scipy",
    "torch==2.7.1",
    "solweig-gpu @ git+https://github.com/nvnsudharsan/SOLWEIG-GPU@main",
    "solweig",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
torch = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["solweig_lyon"]
